test/src/e2e_vm_tests/test_programs/should_fail/nonconst_storage_init/src/main.sw
contract;

use core::*;

storage {
    x: u64 = 5 + 5,
}

abi Test {
    fn foo();
}

impl Test for Contract {
    fn foo() {
        storage.x += 1;
    }
}
